<resources>
    <string name="app_name">Tag Reader</string>
    <!-- Strings for dots menu -->
    <string name="bt_status">BT Status</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>

    <string name="no_tags_msg">Waiting for Tags</string>
    <string name="clipboard_copy">Tags copied to clipboard</string>
    <string name="clipboard_no_copy">No Tags to copy</string>
    <string name="action_newsession">New Session</string>
    <string name="action_savesession">Save Session</string>
    <string name="action_copy">Copy Tags to Clipboard</string>
    <string name="action_mail">eMail Tags</string>
    <string name="action_settings">Settings</string>
    <string name="action_debug">Debug</string>
    <string name="action_device_info">Device Info</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="tags_list_fragment_label">Tags List Fragment</string>
    <string name="stock_type">Stock Type</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Ble scan error messages -->
    <string name="error_bluetooth_not_available">Bluetooth is not available</string>
    <string name="error_bluetooth_disabled">Enable bluetooth and try again</string>
    <string name="error_location_permission_missing">On Android 6.0 location permission is required. Please enable it in phone settings</string>
    <string name="error_location_services_disabled">Location services need to be enabled on Android 6.0</string>
    <string name="error_scan_failed_already_started">Scan with the same filters is already started</string>
    <string name="error_scan_failed_application_registration_failed">Failed to register application for bluetooth scan</string>
    <string name="error_scan_failed_feature_unsupported">Scan with specified parameters is not supported</string>
    <string name="error_scan_failed_internal_error">Scan failed due to internal error</string>
    <string name="error_scan_failed_out_of_hardware_resources">Scan cannot start due to limited hardware resources</string>
    <string name="error_undocumented_scan_throttle">Android 7+ does not allow more scans.</string>
    <string name="error_undocumented_scan_throttle_retry">Try in %d seconds</string>
    <string name="error_bluetooth_cannot_start">Unable to start scanning</string>
    <string name="error_unknown_error">Unknown error</string>
</resources>
